--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="hero-slogan">Un accompagnement sur mesure pour des résultats durables et une santé de fer.</p>
             
             <div class="hero-image-container">
-                <img src="images/accueil.png" alt="Coaching sportif FITLIFE" class="hero-img">
+                <img src="images/acc" alt="Coaching sportif FITLIFE" class="hero-img">
             </div>
 
             <div class="hero-btns">
