--- a/about.html
+++ b/about.html
@@ -21,16 +21,16 @@
     <main class="container">
         <section class="page-title reveal">
             <h1>L'Histoire de <span>FITLIFE</span></h1>
-            <p>Un binôme passionné par votre réussite.</p>
+            <p>Un binôme passionné par votre réussite sportive.</p>
         </section>
 
         <div class="about-grid">
             <article class="mission-card reveal">
                 <h2>Nos Devises</h2>
                 <ul class="devises-list">
-                    <li>🎯 Discipline : La clé de la régularité.</li>
-                    <li>🔥 Énergie : Pour repousser vos limites.</li>
-                    <li>🤝 Écoute : Un suivi personnalisé et humain.</li>
+                    <li>🎯 Discipline : La base de tout progrès.</li>
+                    <li>🔥 Énergie : Pour dépasser vos limites.</li>
+                    <li>🤝 Écoute : Un coaching humain avant tout.</li>
                 </ul>
             </article>
 
@@ -38,16 +38,17 @@
                 <div class="role-card reveal">
                     <span class="job-title">Chef de Projet</span>
                     <h3>Giovanni</h3>
-                    <p>Expert en intégration et structure technique.</p>
+                    <p>Expert en stratégie et en optimisation des entraînements.</p>
                 </div>
                 <div class="role-card reveal">
                     <span class="job-title">Développeur Front-end</span>
                     <h3>Ethan</h3>
-                    <p>Spécialiste du design et de l'expérience utilisateur.</p>
+                    <p>Spécialiste du design et de la performance visuelle.</p>
                 </div>
             </div>
         </div>
     </main>
+
     <script src="script.js"></script>
 </body>
 </html>
